WIP ratio of building/meter ratios in different splits

--- a/ashrae/ashrae-cross-validation.ipynb
+++ b/ashrae/ashrae-cross-validation.ipynb
@@ -76,7 +76,25 @@
         },
         {
             "cell_type": "code",
-            "source": "i = 0\nfor train_df, test_df in yield_train_test_split(readings_df):\n    print(f\"Split {i}\\n\")\n    print(\"Train period: \", train_df[\"timestamp\"].min(), train_df[\"timestamp\"].max())\n    print(\"Test period: \", test_df[\"timestamp\"].min(), test_df[\"timestamp\"].max(), \"\\n\")\n    print(\"Test / train split ratios:\\n\")\n    print(test_df.groupby(\"meter_id\").count() / train_df.groupby(\"meter_id\").count())\n    print(\"=======\")\n    i += 1",
+            "source": "train_df_counts = []\ntest_df_counts = []\nfor i, (train_df, test_df) in enumerate(yield_train_test_split(readings_df)):\n    building_meter_counts_train = (\n        train_df\n        .groupby([\"building_id\", \"meter_id\"])[\"timestamp\"]\n        .nunique()\n        .rename(f\"split_{i}\")\n    )\n    train_df_counts.append(building_meter_counts_train)\n    \n    building_meter_counts_test = (\n        test_df\n        .groupby([\"building_id\", \"meter_id\"])[\"timestamp\"]\n        .nunique()\n        .rename(f\"split_{i}\")\n    )\n    test_df_counts.append(building_meter_counts_test)",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "pd.concat(test_df_counts, axis=1).plot()",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "",
             "metadata": {
                 "trusted": true
             },
