Add logic for finding constant streaks to feature engineering notebook

--- a/ashrae/ashrae-feature-engineering.ipynb
+++ b/ashrae/ashrae-feature-engineering.ipynb
@@ -99,7 +99,16 @@
         },
         {
             "cell_type": "code",
-            "source": "def construct_keep_filter(\n    timestamps: pd.Series,\n    to_keep: list[tuple[datetime | None, datetime | None]],\n):\n    filter_ = False \n    for start, end in to_keep:\n    \n        match (start, end):\n            case None, None:\n                print(\"Continue\")\n            case (datetime(), None):\n                period_filter = timestamps >= start\n            case (None, datetime()):\n                period_filter = timestamps <= end\n            case (datetime(), datetime()):\n                period_filter = (timestamps >= start) & (timestamps <= end)\n        \n        filter_ |= period_filter\n    \n    return filter_\n\n\ndef to_keep_filter(\n    data: pd.DataFrame,\n    to_keep: list[tuple[datetime | None, datetime | None]]\n):\n    \"\"\"\n    Filter data to only include observations included in to_keep filters.\n    Filters are tuples of datetimes specifying start and end timestamps\n    (inclusive) of periods to be included.\n    \"\"\"\n    keep_filter = construct_keep_filter(data[\"timestamp\"], to_keep)\n    return data.loc[keep_filter]",
+            "source": "def _find_constant_streaks(\n    df: pd.DataFrame,\n    streak_length: int = 25,\n    target_column: str = \"meter_reading\"\n):\n    # Compute diffs on target col\n    df = df.copy()\n    df = df.sort_values(\"timestamp\")\n    df[\"target_col_diff\"] = df[target_column].diff()\n    \n    # First find any periods of constant meter readings\n    streaks = []\n    current_streak_start = 0\n    for idx, row in df.iterrows():\n        if pd.isna(row[\"target_col_diff\"]):\n            continue\n        \n        elif row[\"target_col_diff\"] == 0:\n            # Start a new streak if not already a running streak\n            current_streak_start = current_streak_start or idx - 1\n        \n        else:\n            # Streak finished\n            # Save if there is currently a running streak\n            if current_streak_start is not None:\n                streaks.append((current_streak_start, idx - 1))\n    \n            # Reset\n            current_streak_start = None\n            \n\n    # Only keep streaks with length >= streak_length\n    filtered_streaks = []\n    for start, end in streaks:\n        streak_df = df.loc[start: end]\n        assert (streak_df[\"target_col_diff\"].dropna() == 0).all(), print(start, end)\n        if len(streak_df) >= streak_length:\n            start_t = streak_df[\"timestamp\"].min().to_pydatetime()\n            end_t = streak_df[\"timestamp\"].max().to_pydatetime()\n            filtered_streaks.append((start_t, end_t))\n    \n    return filtered_streaks\n\n\ndef find_constant_streaks(\n    readings_df: pd.DataFrame,\n    meter_id: int,\n    building_id: int,\n    streak_length: int = 25,\n    target_column: str = \"meter_reading\"\n) -> list[tuple[datetime | None, datetime | None]]:\n    bm_df = readings_df[\n        (readings_df[\"building_id\"] == building_id)\n        & (readings_df[\"meter_id\"] == meter_id)\n    ]\n    return _find_constant_streaks(bm_df, streak_length, target_column)",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "def construct_keep_filter(\n    timestamps: pd.Series,\n    to_keep: list[tuple[datetime | None, datetime | None]],\n):\n    filter_ = False \n    for start, end in to_keep:\n    \n        match (start, end):\n            case None, None:\n                pass\n            case (datetime(), None):\n                period_filter = timestamps >= start\n            case (None, datetime()):\n                period_filter = timestamps <= end\n            case (datetime(), datetime()):\n                period_filter = (timestamps >= start) & (timestamps <= end)\n        \n        filter_ |= period_filter\n    \n    return filter_\n\n\ndef keep_filter(\n    data: pd.DataFrame,\n    to_keep: list[tuple[datetime | None, datetime | None]]\n):\n    \"\"\"\n    Filter data to only include observations included in to_keep filters.\n    Filters are tuples of datetimes specifying start and end timestamps\n    (inclusive) of periods to be included.\n    \"\"\"\n    keep_filter = construct_keep_filter(data[\"timestamp\"], to_keep)\n    return data.loc[keep_filter]\n\n\ndef remove_filter(\n    data: pd.DataFrame,\n    to_remove: list[tuple[datetime | None, datetime | None]]\n):\n    \"\"\"\n    Filter data by removing all observations included in the to_remove filter.\n    Only observations outside of the filter will be retained in the final data.\n    Filters are tuples of datetimes specifying start and end timestamps\n    (inclusive) of periods to be removed.\n    \"\"\"\n    remove_filter = construct_keep_filter(data[\"timestamp\"], to_remove)\n    return data.loc[~remove_filter]",
             "metadata": {
                 "trusted": true
             },
@@ -113,7 +122,7 @@
         },
         {
             "cell_type": "code",
-            "source": "def filter_electricity_data(\n    readings_df: pd.DataFrame,\n    to_keep_filters: dict[int, list[tuple[datetime | None, datetime | None]]],\n):\n    meter_id = 0\n    for b_id, b_filter in tqdm(to_keep_filters.items()):\n        bm_df = readings_df[\n            (readings_df[\"building_id\"] == b_id)\n            & (readings_df[\"meter_id\"] == meter_id)\n        ]\n        bm_df_filtered = to_keep_filter(bm_df, b_filter)\n        readings_df = readings_df.drop(bm_df.index)\n        readings_df = pd.concat([readings_df, bm_df_filtered], axis=0)\n    return readings_df",
+            "source": "def filter_electricity_data(\n    readings_df: pd.DataFrame,\n    to_keep_filters: dict[int, list[tuple[datetime | None, datetime | None]]],\n    to_remove_filters: dict[int, list[tuple[datetime | None, datetime | None]]],\n):\n    meter_id = 0\n    to_drop_index_values = np.array([])\n    filtered_bm_dfs = []\n    for b_id, b_filter in tqdm(to_keep_filters.items()):\n        bm_df = readings_df[\n            (readings_df[\"building_id\"] == b_id)\n            & (readings_df[\"meter_id\"] == meter_id)\n        ]\n        to_drop_index_values = np.concatenate([to_drop_index_values, bm_df.index])\n        \n        bm_df_filtered = keep_filter(bm_df, b_filter)\n        filtered_bm_dfs.append(bm_df_filtered)\n    \n    readings_df = readings_df.drop(index=to_drop_index_values)\n    filtered_bm_df = pd.concat(filtered_bm_dfs, axis=0)\n    readings_df = pd.concat([readings_df, filtered_bm_df], axis=0)\n    \n    return readings_df",
             "metadata": {
                 "trusted": true
             },
@@ -122,7 +131,7 @@
         },
         {
             "cell_type": "code",
-            "source": "# Keep all data after May 21\nafter_may_21_filter_electricity = {\n    i: [(datetime(2016, 5, 21), None)]\n    for i in (\n        list(range(29)) \n        + list(range(30, 45)) \n        + list(range(47, 53)) \n        + list(range(54, 105))\n    )\n}\n\n# Building specific filters\nbuilding_id_filters_electriciy = {\n    29: [(datetime(2016, 8, 10), None)],\n    45: [(datetime(2016, 7, 1), None)],\n    53: [(datetime(2016, 12, 15), None)],  # Only keeping the final timestamp\n    106: [(datetime(2016, 11, 1), None)],\n    180: [(None, datetime(2016, 2, 17, 10))],\n    218: [(None, datetime(2016, 2, 17, 10))],\n    604: [(datetime(2016, 12, 1), None)],\n    740: [(datetime(2016, 12, 31), None)], # Only keeping the final timestamp\n    803: [(None, datetime(2016, 9, 24))],\n    857: [(None, datetime(2016, 4, 13))],\n    1113: [(datetime(2016, 7, 27, 10), None)],\n    1153: [(datetime(2016, 1, 20, 14), None)],\n    1264: [(None, datetime(2016, 8, 23))],\n    1345: [(None, datetime(2016, 2, 11))],\n    46: [(None, datetime(2016, 3, 1)), (datetime(2016, 5, 21), None)],\n}\n\nto_keep_electricity = after_may_21_filter_electricity | building_id_filters_electriciy",
+            "source": "# Specify keep filters for electricity \nto_keep_electricity = {\n    \n    # Keep everything after May 21\n    i: [(datetime(2016, 5, 21), None)]\n    for i in (\n        list(range(29)) \n        + list(range(30, 45)) \n        + list(range(47, 53)) \n        + list(range(54, 105))\n    )\n} | {\n    \n    # Some building specific filters\n    29: [(datetime(2016, 8, 10), None)],\n    45: [(datetime(2016, 7, 1), None)],\n    53: [(datetime(2016, 12, 15), None)],  # Only keeping the final timestamp\n    106: [(datetime(2016, 11, 1), None)],\n    180: [(None, datetime(2016, 2, 17, 10))],\n    218: [(None, datetime(2016, 2, 17, 10))],\n    604: [(datetime(2016, 12, 1), None)],\n    740: [(datetime(2016, 12, 31), None)], # Only keeping the final timestamp\n    803: [(None, datetime(2016, 9, 24))],\n    857: [(None, datetime(2016, 4, 13))],\n    1113: [(datetime(2016, 7, 27, 10), None)],\n    1153: [(datetime(2016, 1, 20, 14), None)],\n    1264: [(None, datetime(2016, 8, 23))],\n    1345: [(None, datetime(2016, 2, 11))],\n    46: [(None, datetime(2016, 3, 1)), (datetime(2016, 5, 21), None)],\n}",
             "metadata": {
                 "trusted": true
             },
@@ -131,7 +140,25 @@
         },
         {
             "cell_type": "code",
-            "source": "readings_df_train = filter_electricity_data(readings_df_train, to_keep_electricity)",
+            "source": "# Specify remove filters for electricity\nto_remove_electricity = {\n    b_id: find_constant_streaks(readings_df_train, meter_id=0, building_id=b_id)\n    for b_id in (\n        [105]\n        + list(range(107, 128))\n        + list(range(136, 156))\n        + [177]\n        + list(range(245, 255))\n        + [269, 278, 376, 537, 545, 577, 681, 693, 723, 733, 738, 799, 802, 874]\n        + list(range(875, 885))\n        + [886, 897]\n        + list(range(905, 946))\n        + list(range(954, 997))\n        + [1066, 1079, 1096, 1098, 1128, 1154, 1157, 1160, 1169, 1177, 1185, 1202, 1221, 1225, 1226]\n        + list(range(1228, 1281))\n        + list(range(1282, 1314))\n        + list(range(1315, 1325))\n        + [1359]\n    )\n}",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "readings_df_train_before = readings_df_train.copy()\nreadings_df_train_after = filter_electricity_data(\n    readings_df_train,\n    to_keep_filters=to_keep_electricity,\n    to_remove_filters=to_remove_electricity,\n)",
+            "metadata": {
+                "trusted": true
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": "# Test that filters are working\n\nmeter_id = 0\nbuilding_id = np.random.choice(a=list(to_keep_electricity.keys()))\nbuilding_id_filter = to_keep_electricity[building_id]\nprint(building_id, building_id_filter)\n\nbm_df_before = readings_df_train_before[\n    (readings_df_train_before[\"building_id\"] == building_id)\n    & (readings_df_train_before[\"meter_id\"] == meter_id)\n]\nbm_df_after = readings_df_train_after[\n    (readings_df_train_after[\"building_id\"] == building_id)\n    & (readings_df_train_after[\"meter_id\"] == meter_id)\n]\n\nfig, ax = plt.subplots(1, 1, figsize=(15, 4))\nax.plot(\n    bm_df_before[\"timestamp\"].values,\n    bm_df_before[\"meter_reading\"].values,\n    label=f\"Before filter\"\n)\nax.plot(\n    bm_df_after[\"timestamp\"].values,\n    bm_df_after[\"meter_reading\"].values,\n    label=f\"After filter\"\n)\nax.legend();",
             "metadata": {
                 "trusted": true
             },
