Include rolling weather features in global lightgbm model

--- a/ashrae/ashrae-global-lightgbm.ipynb
+++ b/ashrae/ashrae-global-lightgbm.ipynb
@@ -21,14 +21,15 @@
             "accelerator": "none",
             "dataSources": [
                 {
+                    "sourceType": "competition",
                     "sourceId": 9994,
-                    "databundleVersionId": 752467,
-                    "sourceType": "competition"
+                    "databundleVersionId": 752467
                 },
                 {
-                    "sourceId": 10698612,
                     "sourceType": "datasetVersion",
-                    "datasetId": 6473980
+                    "sourceId": 10716110,
+                    "datasetId": 6473980,
+                    "databundleVersionId": 11065150
                 }
             ],
             "isInternetEnabled": true,
@@ -99,7 +100,7 @@
         },
         {
             "cell_type": "code",
-            "source": "CATEGORICAL_FEATURES = [\n    \"building_id\",\n    \"meter_id\",\n    \"site_id\",\n    \"primary_use\",\n]\nNUMERICAL_FEATURES = [\n    \"square_feet\",\n    \"floor_count\",\n    \"air_temperature\",\n    \"cloud_coverage\",\n    \"dew_temperature\",\n    \"precip_depth_1_hr\",\n    \"sea_level_pressure\",\n    \"wind_direction_sin\",\n    \"wind_direction_cos\",\n    \"wind_speed\",\n    \"air_temperature_lag_1\",\n    \"air_temperature_lag_2\",\n    \"air_temperature_lag_3\",\n    \"air_temperature_lag_4\",\n    \"air_temperature_lag_5\",\n    \"dew_temperature_lag_1\",\n    \"dew_temperature_lag_2\",\n    \"dew_temperature_lag_3\",\n    \"dew_temperature_lag_4\",\n    \"dew_temperature_lag_5\",\n    \"sea_level_pressure_lag_1\",\n    \"sea_level_pressure_lag_2\",\n    \"sea_level_pressure_lag_3\",\n    \"sea_level_pressure_lag_4\",\n    \"sea_level_pressure_lag_5\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\",\n    \"building_age_years\",\n    \"building_area_square_feet\",\n    \"relative_humidity\",\n    \"cold_chill\",\n    \"apparent_temperature\",\n    \"heat_index\",\n]\nFEATURES = NUMERICAL_FEATURES + CATEGORICAL_FEATURES\n\nLABEL = \"meter_reading\"",
+            "source": "CATEGORICAL_FEATURES = [\n    \"building_id\",\n    \"meter_id\",\n    \"site_id\",\n    \"primary_use\",\n]\nNUMERICAL_FEATURES = [\n    \"square_feet\",\n    \"floor_count\",\n    \"air_temperature\",\n    \"cloud_coverage\",\n    \"dew_temperature\",\n    \"precip_depth_1_hr\",\n    \"sea_level_pressure\",\n    \"wind_direction_sin\",\n    \"wind_direction_cos\",\n    \"wind_speed\",\n    \"air_temperature_lag_1\",\n    \"air_temperature_lag_2\",\n    \"air_temperature_lag_3\",\n    \"air_temperature_lag_4\",\n    \"air_temperature_lag_5\",\n    \"air_temperature_rolling_mean_12\",\n    \"air_temperature_rolling_mean_24\",\n    \"dew_temperature_lag_1\",\n    \"dew_temperature_lag_2\",\n    \"dew_temperature_lag_3\",\n    \"dew_temperature_lag_4\",\n    \"dew_temperature_lag_5\",\n    \"dew_temperature_rolling_mean_12\",\n    \"dew_temperature_rolling_mean_24\",\n    \"sea_level_pressure_lag_1\",\n    \"sea_level_pressure_lag_2\",\n    \"sea_level_pressure_lag_3\",\n    \"sea_level_pressure_lag_4\",\n    \"sea_level_pressure_lag_5\",\n    \"sea_level_pressure_rolling_mean_12\",\n    \"sea_level_pressure_rolling_mean_24\",\n    \"hour_sin\",\n    \"hour_cos\",\n    \"day_of_week_sin\",\n    \"day_of_week_cos\",\n    \"month_sin\",\n    \"month_cos\",\n    \"is_weekend\",\n    \"building_age_years\",\n    \"building_area_square_feet\",\n    \"relative_humidity\",\n    \"cold_chill\",\n    \"apparent_temperature\",\n    \"heat_index\",\n]\nFEATURES = NUMERICAL_FEATURES + CATEGORICAL_FEATURES\n\nLABEL = \"meter_reading\"",
             "metadata": {
                 "trusted": true
             },
